fix(cv): adjust spacing for .section
- Move position: relative from cv.module.scss to global.scss
- Update .section padding from 3rem 1.5rem to 3rem 3rem 3rem 5rem
- Add spaces around operators in media queries (lint fix)

--- a/app/cv/cv.module.scss
+++ b/app/cv/cv.module.scss
@@ -5,10 +5,6 @@
   position: relative;
 }
 
-:global(.section) {
-  position: relative;
-}
-
 .withBackground {
   position: relative;
 
